--- a/src/styles.css
+++ b/src/styles.css
@@ -84,13 +84,14 @@ footer {
   padding: 0.5rem 0 0.5rem 0.5rem;
   margin: 0.25rem 0;
   background-color: #808080 ;
+  min-width:400px;
 }
 
 .item input[type="checkbox"] {
   text-align: center;
   width: 1.5rem;
-  width: 48px;
-  min-width: 48px;
+  width: 80px;
+  min-width: 80px;
   height: 1.5rem;
   height: 48px;
   min-height: 48px;
@@ -99,13 +100,14 @@ footer {
 }
 
 .item svg {
-  margin-left:20px;
+  margin-left:30%;
   width: 48px;
   min-width: 48px;
   height: 36px;
   font-size: 1rem;
   color: black;
   cursor: pointer;
+
 }
 
 .item input[type="checkbox"]:focus + label {
